--- a/index.html
+++ b/index.html
@@ -1,48 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>My Awesome Company Contact Page</title>
-  </head>
-  <body>
 
-    <h1>Company Inc.</h1>
-    <h2>For all your incorporated company needs</h2>
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <title>My Awesome Company Contact Page</title>
+</head>
 
-    <!-- First, create a form tag where our inputs will be nested -->
+<body>
 
+  <h1>Company Inc.</h1>
+  <h2>For all your incorporated company needs</h2>
 
-      <!-- Add a label for 'fullname'-->
+  <!-- First, create a form tag where our inputs will be nested -->
+  <form action="">
 
-      <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <!-- Include the place holder text "Enter Name" and make this input required -->
+    <!-- Add a label for 'fullname'-->
+    <label for="fullname">Full Name</label>
 
+    <!-- Add a text input with the id and name attributes set to 'fullname' -->
+    <!-- Include the place holder text "Enter Name" and make this input required -->
+    <input type="text" required placeholder="Enter Name" id="fullname" name="fullname">
 
-      <!-- Add a label for 'email'-->
+    <!-- Add a label for 'email'-->
+    <label for="email">Email</label>
 
-      <!-- Add a email input with the id and name attributes set to 'email' -->
-      <!-- Include the place holder text "Enter Email" and make this input required -->
+    <!-- Add a email input with the id and name attributes set to 'email' -->
+    <!-- Include the place holder text "Enter Email" and make this input required -->
+    <input type="email" required placeholder="Enter Email" id="email" name="email">
 
+    <!-- Add a label for 'phone'-->
+    <label for="phone">Phone</label>
 
-      <!-- Add a label for 'phone'-->
+    <!-- Add a telephone input with the id and name attributes set to 'phone' -->
+    <!-- Include the place holder text "Enter Telephone (optional)" -->
+    <input type="tel" placeholder="Enter Telephone (optional)" id="phone" name="phone">
 
-      <!-- Add a telephone input with the id and name attributes set to 'phone' -->
-      <!-- Include the place holder text "Enter Telephone (optional)" -->
+    <!-- Add a label for 'message'-->
+    <label for="message">Message</label>
 
+    <!-- Add a textarea tag with the id and name attributes set to 'message' -->
+    <!-- Include the place holder text "Enter Message" -->
+    <textarea placeholder="Enter Message" id="message" name="message"></textarea>
 
-      <!-- Add a label for 'message'-->
+    <!-- Add a checkbox input with the id set to 'checkbox' -->
+    <input type="checkbox" id="checkbox" name="check1" value="Check1">Option1
 
-      <!-- Add a textarea tag with the id and name attributes set to 'message' -->
-      <!-- Include the place holder text "Enter Message" -->
+    <!-- Add an input with the type set to 'submit' -->
+    <input type="submit" value="submit">
+  </form>
+</body>
 
-
-      <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
-
-      <!-- Add an input with the type set to 'submit' -->
-
-    
-  </body>
 </html>
